Ajustes en estilos
Ajustes en estilos

--- a/src/app/aaacesa/finanzas/finanzas.component.html
+++ b/src/app/aaacesa/finanzas/finanzas.component.html
@@ -305,25 +305,25 @@
                       <div class="row">
                         <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                           <div >
-                            <small class="info-box-text" style="font-size:12px;">Total Cartera</small>
+                            <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">Total Cartera</small>
                           </div>
                           <div>
-                              <small class="info-box-text" style="font-size:12px;">Total Vencido</small>
+                              <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">Total Vencido</small>
                             </div>
                           <div>
-                            <small class="info-box-text" style="font-size:12px;">Total Corriente</small>
+                            <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">Total Corriente</small>
                           </div>
 
                         </div>
                         <div  class="col-xs-12 col-sm-12 col-md-6 col-lg-6 col-xl-6">
                             <div >
-                                <small class="info-box-text" style="font-size:12px;">1,154,000</small>
+                                <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">1,154,000</small>
                               </div>
                               <div>
-                                  <small class="info-box-text" style="font-size:12px;">45,219</small>
+                                  <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">45,219</small>
                                 </div>
                               <div>
-                                <small class="info-box-text" style="font-size:12px;">1,199,219</small>
+                                <small class="info-box-text" style="font-size:12px; padding: 5px 5px 5px 5px">1,199,219</small>
                               </div>
                         </div>
                         </div>
