--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -244,7 +244,7 @@
                     </div>
                     <div class="col-6 col-sm-6 col-md-4 col-lg-3 col-xl-3">
                       <div class="detail-text font-weight-bold">Peso</div>
-                      <p class="detail-text">{{detailData.Peso}} kg</p>
+                      <p class="detail-text">{{detailData.Peso}} kg.</p>
                     </div>
                     <div class="col-6 col-sm-6 col-md-4 col-lg-4 col-xl-3">
                       <div class="detail-text font-weight-bold">Fecha de Arribo</div>
