--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -236,7 +236,7 @@
                             </div>
                             <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
                               <div class="detail-text font-weight-bold">Peso</div>
-                              <p class="detail-text">{{detailData.Peso}} kg</p>
+                              <p class="detail-text">{{detailData.Peso}} kg.</p>
                             </div>
                             <div class="col-6 col-sm-6 col-md-6 col-lg-3 col-xl-3">
                                 <div class="detail-text font-weight-bold">Etiquetado  </div>
