--- a/src/app/aaacesa/admin-user/crear-user/crear-user.component.html
+++ b/src/app/aaacesa/admin-user/crear-user/crear-user.component.html
@@ -99,14 +99,14 @@
                   <table mat-table [dataSource]="dataSourceMod">
                     <!-- ClaveModulo Column -->
                     <ng-container matColumnDef="ClaveModulo">
-                      <th mat-header-cell *matHeaderCellDef style="font-size: x-small;" > Clave Modulo </th>
-                      <td mat-cell *matCellDef="let element" style="font-size: x-small;"> {{element.ClaveModulo}} </td>
+                      <th mat-header-cell *matHeaderCellDef style="font-size:small;" > Clave Modulo </th>
+                      <td mat-cell *matCellDef="let element" style="font-size: small;"> {{element.ClaveModulo}} </td>
                     </ng-container>
                    
                     <!-- Detalle Column -->
                     <ng-container matColumnDef="Detalle">
-                      <th mat-header-cell *matHeaderCellDef style="font-size: x-small;"> Detalle </th>
-                      <td mat-cell *matCellDef="let element" style="font-size: x-small;"> {{element.Detalle}} </td>
+                      <th mat-header-cell *matHeaderCellDef style="font-size: small;"> Detalle </th>
+                      <td mat-cell *matCellDef="let element" style="font-size: small;"> {{element.Detalle}} </td>
                     </ng-container>
       
                     <tr mat-header-row *matHeaderRowDef="columnsMod" style="height: 3vh;"></tr>
