--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -434,11 +434,11 @@ td.mat-cell{
     // }   
 
     &__panel {
-        position: absolute;
+        position: fixed;
         right: 0;
         top: 47%;                                        
-        width: 85vw;
-        height: 80vh;
+        // width: 85vw;
+        // height: 80vh;
         // overflow-y: auto;
         border-radius: 5px;
         box-shadow: 0px 0px 10px 1px #9EA6B1;
@@ -497,7 +497,7 @@ td.mat-cell{
     }     
 
     &__backdrop {        
-        position: absolute;
+        position: fixed;
         height: 100vh;
         width: 100vw;
         background-color: rgba(0, 0, 0, .32);
