--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -279,7 +279,7 @@
         <div class="row mt-3">
           <div class="col-lg-12 text-center">
             <button matStepperPrevious class="btn btn-pill btn-primary btn-sm mr-4">Regresar</button>            
-            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm">Siguiente</button>            
+            <button (click)="guardarFirstForm()" matStepperNext class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1 btn-s">Siguiente</button>            
           </div>
         </div>
 
