--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -437,7 +437,7 @@ td.mat-cell{
         position: fixed;
         right: 0;
         top: 47%;                                        
-        // width: 85vw;
+        max-width: 55vw;
         // height: 80vh;
         // overflow-y: auto;
         border-radius: 5px;
@@ -480,7 +480,8 @@ td.mat-cell{
             background-color: #183964;
             border-radius: 20px 0px 0px 20px;
             font-size: 2rem;
-            cursor: pointer;            
+            cursor: pointer;
+            z-index: 1;            
 
             &--hide {
                 display: none;
