--- a/src/app/views/dashboard/dashboard.component.scss
+++ b/src/app/views/dashboard/dashboard.component.scss
@@ -1,7 +1,15 @@
-.img {
-    max-width: 600px;
-    padding: 0;
+img {
+  width: 100%;
+  height: 180px;
 }
+@supports(object-fit: cover){
+     img{
+     /*  height: 100%; */
+      object-fit: cover;
+      object-position: center center;
+    }
+}
+
 
 .bg-gray{
     background-color: gray;
