--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -322,6 +322,8 @@ td.mat-cell{
         left: 50%;
         bottom: 0;
         transform: translate(-50%, 0%);
+        text-align: center;
+        width: 100%;
     }
 }      
    
