--- a/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-exportaciones.component.html
@@ -141,7 +141,7 @@
       <!-- <ng-template matStepLabel>Subir documentos</ng-template> -->
 
       <div class="container mt-3">
-        <p>Subir documentos: Guías master y house, gafete, pedimento pagado, transferencia de carga y DODA.<small> (mínimo subir un documento)</small></p> 
+        <p>Subir documentos: Guías master y house, gafete, pedimento pagado, transferencia de carga y DODA. (mínimo subir un documento)</p> 
         
         <div class="row mb-1">                     
           <div class="col-lg-12 mb-3">
