--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -209,7 +209,7 @@
       <!-- <ng-template matStepLabel>Subir documentos</ng-template> -->
 
       <div class="container mt-3">
-        <p>Subir documentos: Guías revalidadas, gafete, carta de etiquetado, carta de sesión de derechos.<small> (mínimo subir un documento)</small></p>  
+        <p>Subir documentos: Guías revalidadas, gafete, carta de etiquetado, carta de sesión de derechos. (mínimo subir un documento)</p>  
         
         <div class="row mb-1">                     
           <div class="col-lg-12 mb-3">
