--- a/src/app/aaacesa/abandono/abandono.component.html
+++ b/src/app/aaacesa/abandono/abandono.component.html
@@ -4,7 +4,7 @@
       <div class="row mb-3">
         <div class="col-md-4 offset-md-8">
           <mat-form-field class="input-full-width">
-            <input matInput [(ngModel)]="filterQuery" type="text" placeholder="Buscar..." />
+            <input matInput (input)="generalSearch()" [(ngModel)]="filterQuery" type="text" placeholder="Buscar..." />
             <mat-icon matSuffix><i class="fa fa-search"></i></mat-icon>
           </mat-form-field>
         </div>
@@ -12,7 +12,7 @@
       <mat-tab-group #tabGroup (selectedTabChange)="tabChanged($event)" >
         <mat-tab label="Pre Notificaciones"> 
           <div class="table-responsive">
-            <table mat-table [dataSource]="dataSource.data | dataFilter : filterQuery" matSort class="mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     
               <!-- Nombre Column -->
               <ng-container matColumnDef="Master">
@@ -47,16 +47,17 @@
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
-            <mat-paginator [length]="100"
+            <mat-paginator  #PreNotificacionesPaginator
+                            [length]="100"
                             [pageSize]="5"
                             [pageSizeOptions]="[5, 10, 25, 100]">
             </mat-paginator>
           </div>
         </mat-tab>
         
-        <mat-tab label="Notificaciones">  
+        <mat-tab  label="Notificaciones">  
           <div class="table-responsive">
-            <table mat-table [dataSource]="dataSource.data | dataFilter : filterQuery" matSort class="mat-elevation-z8">
+            <table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z8">
     
               <!-- Nombre Column -->
               <ng-container matColumnDef="Master">
@@ -91,7 +92,8 @@
               <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
               <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
             </table>
-            <mat-paginator [length]="100"
+            <mat-paginator  #NotificacionesPaginator 
+                            [length]="100"
                             [pageSize]="5"
                             [pageSizeOptions]="[5, 10, 25, 100]">
             </mat-paginator>
