--- a/src/app/aaacesa/calculadora/calculadora.component.html
+++ b/src/app/aaacesa/calculadora/calculadora.component.html
@@ -68,7 +68,7 @@
           <div class="row mt-2">
             <div class="col-md-6 styled-select">
               <mat-form-field class="input-full-width">
-                <input matInput type="text" [(ngModel)]="calculoManiobra.FechaEntrada" formControlName="fechaEntradaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate"  placeholder="Fecha de Entrada (dd/mm/AAAA)" required >
+                <input matInput type="text" [(ngModel)]="calculoManiobra.FechaEntrada" formControlName="fechaEntradaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placement="top"  placeholder="Fecha de Entrada (dd/mm/AAAA)" required >
                 <mat-error *ngIf="calculoForm.get('fechaEntradaCtrl').errors?.required">
                     El campo Fecha de Entrada es <strong>requerido</strong>
                 </mat-error> 
@@ -76,7 +76,7 @@
             </div><!-- end col -->
             <div class="col-md-6 styled-select">
               <mat-form-field class="input-full-width">
-                  <input matInput type="text" [(ngModel)]="calculoManiobra.FechaSalida" formControlName="fechaSalidaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placeholder="Fecha de Salida (dd/mm/AAAA)" required >
+                  <input matInput type="text" [(ngModel)]="calculoManiobra.FechaSalida" formControlName="fechaSalidaCtrl" #dp="bsDatepicker" bsDatepicker [minDate]="minDate" placement="top" placeholder="Fecha de Salida (dd/mm/AAAA)" required >
                   <mat-error *ngIf="calculoForm.get('fechaSalidaCtrl').errors?.required">
                       El campo Fecha de Salida es <strong>requerido</strong>
                   </mat-error>  
