--- a/src/app/aaacesa/bitacoras/bitacoras.component.html
+++ b/src/app/aaacesa/bitacoras/bitacoras.component.html
@@ -62,6 +62,16 @@
         </div>    
       </div>      
       <!-- End Busqueda Superior -->
+
+      <div class="row mb-3" *ngIf="visibleRes" >
+        <div class="col-md-4 offset-md-8">
+          <mat-form-field class="input-full-width">
+            <input matInput (keyup)="applyFilter($event.target.value)" type="text" placeholder="Buscar..." />
+            <mat-icon matSuffix><i class="fa fa-search"></i></mat-icon>
+          </mat-form-field>
+        </div>
+      </div>
+
       <div class="table-responsive">
         <table mat-table [dataSource]="dataSource" matSort>
 
