--- a/src/app/containers/default-layout/default-layout.component.html
+++ b/src/app/containers/default-layout/default-layout.component.html
@@ -66,9 +66,9 @@
         <a class="dropdown-item" [routerLink]="" (click)="redirect('bitacoras')" ><i class="icon-note"></i>Bitácora</a>
         <div class="dropdown-divider"></div>
         <a class="dropdown-item" *ngIf="rolUser == 'ADMIN' || rolUser == 'MAESTRO' " [routerLink]="" (click)="redirect('adminuser')" ><i class="icon-people"></i> Admin de usuarios</a>
-        <div class="dropdown-divider" *ngIf="rolUser == 'ADMIN' || rolUser == 'MAESTRO' "></div>
-        <!-- <a class="dropdown-item" href="#"><i class="icon-lock"></i> Bloquear</a> -->
-        <!-- <div class="dropdown-divider"></div> -->
+        <div class="dropdown-divider  d-sm-block d-lg-none" *ngIf="rolUser != 'OPERACION' "></div>
+        <a class="dropdown-item  d-sm-block d-lg-none" *ngIf="rolUser != 'OPERACION'" [routerLink]="" (click)="redirect('calculadora')" ><i class="icon-people"></i> Cálculo Maniobras</a>
+        <div class="dropdown-divider"></div>
         <a class="dropdown-item" href="#" (click)="closeSession()"><i class="cui-account-logout"></i> Salir</a>
       </div>
     </li>
@@ -87,15 +87,17 @@
     </ol>
     <div class="container-fluid">
       <router-outlet></router-outlet>
-      <div (click)="toogleCalc=!toogleCalc" [ngClass]="{'floating__panel-close2-btn--hide': toogleCalc}" class="floating__panel-close2-btn"><i class="fas fa-calculator"></i></div>            
-      <div [ngClass]="{'floating__backdrop': toogleCalc}"></div>
 
-      <div [ngClass]="{'floating__panel--active': toogleCalc}" class="floating__panel">
+      <!-- Panel Flotanta -->
+      <div *ngIf="rolUser != 'OPERACION' " (click)="toogleCalc=!toogleCalc" [ngClass]="{'floating__panel-close2-btn--hide': toogleCalc}" class="floating__panel-close2-btn"><i class="fas fa-calculator"></i></div>            
+      <div *ngIf="rolUser != 'OPERACION' " [ngClass]="{'floating__backdrop': toogleCalc}"></div>
+
+      <div *ngIf="rolUser != 'OPERACION'" [ngClass]="{'floating__panel--active': toogleCalc}" class="floating__panel">
         <div (click)="toogleCalc=!toogleCalc" [ngClass]="{'floating__panel-close-btn--hide': !toogleCalc}" class="floating__panel-close-btn"><i class="fas fa-calculator"></i></div>          
         <div class="container-fluid">
           <app-calculdora></app-calculdora>
-        </div><!-- modal  -->
-      </div>
+        </div><!-- /.Conatiner  -->
+      </div><!-- /.Panel flotante  -->
     </div><!-- /.container-fluid -->
   </main>
 </div>
