--- a/src/app/aaacesa/admin-user/admin-user.component.html
+++ b/src/app/aaacesa/admin-user/admin-user.component.html
@@ -1,7 +1,7 @@
 <ngx-loading [show]="loading" [config]="{ fullScreenBackdrop: true }"></ngx-loading>
 <div class="container">
   <!-- <div class="row justify-content-end" *ngIf="numCuentas && rolUser"> -->
-    <div class="row justify-content-end">  
+    <div class="row justify-content-end" *ngIf="numCuentas && rolUser" >  
       <div class="col-lg-12 text-right btn-crear">
       <button (click)="crearUser()" class="btn btn-link"> <i class="fas fa-plus-circle"></i> Crear Usuario</button>
     </div>
