--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -104,7 +104,7 @@
             </div>
             <div class="col-xs-8 col-sm-8 col-md-8 col-lg-8 col-xl-8" >
               <div>
-              <img src="https://casetasdemexico.com.mx/wp-content/uploads/2016/02/AEROPUERTO.jpg" alt="Imagen Aeropuerto" style="height: 155px" >
+              <img #airport src="https://casetasdemexico.com.mx/wp-content/uploads/2016/02/AEROPUERTO.jpg" alt="Imagen Aeropuerto" style="height: 155px" >
             </div>
             
             <!-- <div class="row"> -->
