Prealertas + Radio Otro (comentario required) + Leyenda cadena frio tarifa + Disabled change style similar (read only)

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -186,6 +186,14 @@ td.mat-cell{
     pointer-events: none !important;
 }
 
+// Mat Input
+.mat-input-element:disabled {
+    color: currentColor !important;
+}
+// .mat-form-field-appearance-legacy.mat-form-field-disabled .mat-form-field-underline {
+//     background-image: linear-gradient(to right,rgba(0,0,0,.42) 0,rgba(0,0,0,.42) 100%,transparent 0) !important;
+// }
+
 
 //datepicker
 .bs-datepicker {
