--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -63,7 +63,7 @@
     <mat-step [stepControl]="secondFormGroup">
       <!-- <ng-template matStepLabel>Información complementaria</ng-template> -->
               
-      <div class="container mt-3">
+      <div class="container mt-1">
         <form [formGroup]="secondFormGroup">
           <div class="row mb-1">            
               <div class="col-lg-4">
@@ -78,6 +78,12 @@
               <div class="col-lg-4">  
                 <mat-form-field class="input-full-width">
                   <input matInput type="text" formControlName="piezasCtrl" placeholder="Piezas"/>
+                  <mat-error *ngIf="secondFormGroup.get('piezasCtrl').errors?.required">
+                    Este campo es obligatorio
+                  </mat-error> 
+                  <mat-error *ngIf="secondFormGroup.get('piezasCtrl').errors?.pattern">
+                    Debe ser un numero
+                  </mat-error>
                 </mat-form-field>
               </div>
               <div class="col-lg-4">
@@ -134,9 +140,9 @@
 
               <div class="col-lg-8">
                 <mat-form-field class="input-full-width">
-                  <mat-select formControlName="condicionesAlmacenesCtrl" placeholder="Condiciones Almacen" #singleSelect>
+                  <mat-select formControlName="condicionesAlmacenesCtrl" placeholder="Condiciones Almacén" #singleSelect>
                     <mat-option>                      
-                      <ngx-mat-select-search formControlName="condicionesAlmacenesSearchCtrl" [placeholderLabel]="'Condiciones Almacen'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
+                      <ngx-mat-select-search formControlName="condicionesAlmacenesSearchCtrl" [placeholderLabel]="'Condiciones Almacén'" [noEntriesFoundLabel]="'No hay coincidencias'"></ngx-mat-select-search>
                     </mat-option>
                     <!-- <mat-option>Ninguno</mat-option>                     -->
                     <mat-option *ngFor="let option of condicionesAlmacenesCatalogo | filterSelect: secondFormGroup.get('condicionesAlmacenesSearchCtrl').value" [value]="option.CveCondicionalmacenaje"> 
@@ -156,7 +162,8 @@
                       <mat-option *ngFor="let option of rangoTemperaturaCatalogo | filterSelect: secondFormGroup.get('rangoTemperaturaSearchCtrl').value" [value]="option.Concepto"> 
                         {{option.Concepto}}
                       </mat-option>
-                    </mat-select>                  
+                    </mat-select>   
+                    <!-- <mat-hint align="end"><span style="font-size: 0.55rem; float: right; text-align: right; font-weight: bold;">Cadena fría genera el costo respectivo conforme a tarifa.</span></mat-hint>                -->
                   </mat-form-field>
                 </div>                          
                                           
@@ -218,6 +225,9 @@
                     <mat-radio-button class="col" *ngFor="let option of instruccionesManejoCatalogo" [value]="option.ClaveInstruccion" color="primary">
                       <!-- {{option.ClaveInstruccion}} - {{option.Descripcion}} -->
                       {{option.Descripcion}}
+                    </mat-radio-button>       
+                    <mat-radio-button class="col" value="O" color="primary">                      
+                      Otro
                     </mat-radio-button>                    
                   </div>                    
                 </mat-radio-group>
@@ -238,6 +248,10 @@
               <button matStepperPrevious class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Regresar</button>            
               <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1">Siguiente</button>            
             </div>
+          </div>
+
+          <div class="row mt-1" style="font-size: 0.55rem; font-weight: bold; float:left;">
+            Cadena fría general el costo respectivo conforme a tarifa.
           </div>
       </div>
                 
