Ajustes Acento Búsqueda parseInt hora,minuto form

--- a/src/app/aaacesa/bitacoras/bitacoras.component.html
+++ b/src/app/aaacesa/bitacoras/bitacoras.component.html
@@ -56,7 +56,7 @@
               <button (click)="buscarBitacoras()" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-7 mb-1 pl-0 align-self-start">              
-              <button (click)="limpiarFlitros()" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
+              <button (click)="limpiarFlitros()" class="btn btn-pill btn-primary btn-sm"> Nueva Búsqueda</button>
             </div>
           </div>
         </div>    
