--- a/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-prealertas.component.html
@@ -61,6 +61,7 @@
       
     </mat-step>
     <mat-step [stepControl]="secondFormGroup">
+    <!-- <mat-step [completed]="isSecondFormAndTimeValid"> -->
       <!-- <ng-template matStepLabel>Información complementaria</ng-template> -->
               
       <div class="container mt-1">
@@ -209,10 +210,31 @@
 
             </div>
 
-            <div class="row mb-1">
-              <div class="col-lg-4">                
+            <div class="row mb-2">
+              <div class="col-lg-3">                
                   <mat-slide-toggle formControlName="consolidadoCtrl" color="primary">Consolidado</mat-slide-toggle>                                  
-              </div>           
+              </div>   
+              
+              <!-- <div class="col-lg-9">
+                <div class="row mb-1">
+                  <div class="col-lg-12">
+                    Instrucciones de Manejo
+                  </div>
+                  <div class="col-lg-12">
+                    <mat-radio-group formControlName="instruccionesManejoCtrl" aria-label="Select an option">
+                      <div class="row mt-1">
+                        <mat-radio-button class="col" *ngFor="let option of instruccionesManejoCatalogo" [value]="option.ClaveInstruccion" color="primary">                      
+                          {{option.Descripcion}}
+                        </mat-radio-button>       
+                        <mat-radio-button class="col" value="O" color="primary">                      
+                          Otro
+                        </mat-radio-button>                    
+                      </div>                    
+                    </mat-radio-group>
+                  </div>
+                </div>
+              </div> -->
+              
             </div>
 
             <div class="row mb-1">
@@ -221,9 +243,8 @@
               </div>
               <div class="col-lg-12">
                 <mat-radio-group formControlName="instruccionesManejoCtrl" aria-label="Select an option">
-                  <div class="row mt-3">
-                    <mat-radio-button class="col" *ngFor="let option of instruccionesManejoCatalogo" [value]="option.ClaveInstruccion" color="primary">
-                      <!-- {{option.ClaveInstruccion}} - {{option.Descripcion}} -->
+                  <div class="row mt-1">
+                    <mat-radio-button class="col" *ngFor="let option of instruccionesManejoCatalogo" [value]="option.ClaveInstruccion" color="primary">                      
                       {{option.Descripcion}}
                     </mat-radio-button>       
                     <mat-radio-button class="col" value="O" color="primary">                      
@@ -251,7 +272,7 @@
           </div>
 
           <div class="row mt-1" style="font-size: 0.55rem; font-weight: bold; float:left;">
-            Cadena fría general el costo respectivo conforme a tarifa.
+            - Cadena fría genera el costo respectivo conforme a tarifa.
           </div>
       </div>
                 
