--- a/src/app/aaacesa/exportaciones/exportaciones.component.html
+++ b/src/app/aaacesa/exportaciones/exportaciones.component.html
@@ -69,7 +69,7 @@
               <button (click)="buscarExportaciones()" style="float: right;" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
             </div>
             <div class="col-xs-6 col-sm-6 col-md-12 col-lg-12 col-xl-7 mb-1">              
-              <button (click)="buscaExportacionesNueva()" style="float: right;" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
+              <button (click)="buscaExportacionesNueva()" style="float: right;" class="btn btn-pill btn-primary btn-sm"> Nueva Búsqueda</button>
             </div>
           </div>
         </div>    
