--- a/src/app/aaacesa/mercancias/mercancias.component.html
+++ b/src/app/aaacesa/mercancias/mercancias.component.html
@@ -31,7 +31,7 @@
               <button (click)="buscarMercancias()" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
             </div>
             <div class="col  col-xs-6 col-md-4 align-self-start">              
-              <button (click)="limpiarFlitros()" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
+              <button (click)="limpiarFlitros()" class="btn btn-pill btn-primary btn-sm"> Nueva Búsqueda</button>
             </div>
           </div>
         </div>    
