--- a/src/app/aaacesa/prealertas/prealertas.component.html
+++ b/src/app/aaacesa/prealertas/prealertas.component.html
@@ -81,7 +81,7 @@
               <button (click)="buscarPrealertas()" style="float:right" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
             </div>
             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1 align-self-start">              
-              <button (click)="buscaPrealertasNueva()" style="float:right" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
+              <button (click)="buscaPrealertasNueva()" style="float:right" class="btn btn-pill btn-primary btn-sm"> Nueva Búsqueda</button>
             </div>
           </div>
         </div>    
