--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -82,7 +82,7 @@
               <button (click)="buscarPrevios()" style="float: right;" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1">
-              <button (click)="buscaPreviosNueva()" style="float: right;" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
+              <button (click)="buscaPreviosNueva()" style="float: right;" class="btn btn-pill btn-primary btn-sm"> Nueva Búsqueda</button>
             </div>
           </div>
         </div> 
