--- a/src/app/aaacesa/salidas/salidas.component.html
+++ b/src/app/aaacesa/salidas/salidas.component.html
@@ -69,7 +69,7 @@
               <button (click)="buscarSalidas()" style="float: right;" class="btn btn-pill btn-primary btn-sm"> <i class="fas fa-search"></i> Buscar</button>
             </div>
             <div class="col-sm-12 col-md-12 col-lg-12 col-xl-7 mb-1">
-              <button (click)="buscaSalidasNueva()" style="float: right;" class="btn btn-pill btn-primary btn-sm"> Nueva Busqueda</button>
+              <button (click)="buscaSalidasNueva()" style="float: right;" class="btn btn-pill btn-primary btn-sm"> Nueva Búsqueda</button>
             </div>
           </div>
         </div>    
