--- a/src/app/aaacesa/dialogs/dialog-sesion-alert.component.html
+++ b/src/app/aaacesa/dialogs/dialog-sesion-alert.component.html
@@ -14,7 +14,11 @@
         </div>
         <div class="row">
             <div class="col text-right">
-                <button mat-dialog-close type="button" class="btn btn-primary btn-pill btn-sm" aria-label="Close">
+                <button mat-button class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1" [mat-dialog-close]="data.respuesta" *ngIf="data.respuesta" cdkFocusInitial>
+                    <i class="fa fa-check"></i>
+                    Renovar sesión
+                </button>
+                <button mat-dialog-close type="button" class="btn btn-pill btn-primary btn-sm btn-save-forms mb-1 mb-md-0 mr-1 ml-1" aria-label="Close">
                     Entendido <i class="fa fa-check"></i>
                 </button>
             </div>
